# workOrder

./: .env.development  .env.production  .env.tauri  .gitignore  README.md  index.html  package-lock.json  package.json  pom.xml  tsconfig.node.json  vite.config.ts  打包.bat
config/: ports.ts
docs/: backend.md  dev-commands.md
docs/api/: commands.md
docs/upgrade/: v1.0-to-1.1.md
installer/: workOrder_1.0.0_x64_en-US.msi
plan/: Cursor规则说明.md  实现计划.md  技术选型.md  版本规划.md  需求文档.md
portable/: 迁移数据.bat  鍚姩 workOrder.bat
scripts/: package-windows.bat
src/: App.vue  bindings.ts  main.ts  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: attachment.rs  mod.rs  progress_log.rs  settings.rs  status_config.rs  tag_config.rs  work_order.rs
src-tauri/src/db/: connection.rs  datetime.rs  migrate.rs  mod.rs  schema.sql
src-tauri/src/models/: attachment.rs  mod.rs  progress_log.rs  settings.rs  status_config.rs  tag_config.rs  work_order.rs  work_order_status.rs
src-tauri/src/services/: attachment_service.rs  migration_service.rs  mod.rs  progress_log_service.rs  settings_service.rs  status_config_service.rs  tag_config_service.rs  work_order_service.rs
src-tauri/src/settings/: backup.rs  migration.rs  mod.rs
src/api/: attachments.ts  progressLogs.ts  settings.ts  statusConfig.ts  tagConfig.ts  workOrders.ts
src/components/: AttachmentGallery.vue  ProgressLogForm.vue  ShortcutConfigPanel.vue  StatusColorPicker.vue  (+3 more)
(+44 files in other folders)
