[package]
name = "workorder"
version = "1.1.0"
description = "workOrder desktop app"
authors = ["workOrder"]
edition = "2021"
default-run = "workorder"

[[bin]]
name = "workorder-migrate"
path = "src/bin/workorder_migrate.rs"

[lib]
name = "workorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
specta = { version = "=2.0.0-rc.25", features = ["chrono", "derive"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
dunce = "1"
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
